compiler/eight-tests/tests/snapshots/syntax_lowering/compiler_tests__syntax_lowering@generic_substituion.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for syntax_lowering
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/syntax-lowering/generic_substituion.test
input_file: compiler/eight-tests/tests/syntax-lowering/generic_substituion.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn substitute<$1'0, $1'1, $1'2>(a: i32, b: $1'0, c: $1'1, d: $1'2) -> $1'2;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn substitute<?0, ?1, ?2>(a: i32, b: ?0, c: ?1, d: ?2) -> ?2 {
      return (d as ?2);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
